--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="google-site-verification" content="z5YEqeESIqShDexciWKKCqoc8BDGPFoolnQmdF60Fdw" />
     <!-- <meta name="theme-color" content="#000000" /> -->
     <!-- <meta
       name="description"
@@ -29,6 +30,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Abdumajid Rashidov</title>
+    
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
